--- a/working/templates/todo/todo_detail.html
+++ b/working/templates/todo/todo_detail.html
@@ -7,4 +7,7 @@
     
     <p>Des serveurs comme PythonAnywhere réservent un traitement particuliers aux "fichiers statiques" (par exemple les fichiers CSS), notamment afin de les charger plus rapidement. En conséquence, à chaque fois que nos fichiers CSS changent, nous devons executer une commande pour que le serveur les mette à jour.
          Cette commande s'appelle collectstatic.</p>
+         <a class="btn btn-default" href="{% url 'todo_edit' pk=todos.pk %}">
+           edit
+        </a>
 {% endblock content %}
